--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
         </dependency>
+        <dependency>
+            <groupId>jpcap</groupId>
+            <artifactId>jpcap</artifactId>
+            <version>0.1.18-002</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
